test/visibility/import/basic-error2.good
basic-error2.chpl:12: In function 'main':
basic-error2.chpl:13: error: unresolved call 'foo()'
basic-error2.chpl:13: note: because no functions named foo found in scope
